make it java7 compliant